{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 62,
  "lineage": "7a2b329f-1d2e-e0a0-58bf-2e1f7ce0edba",
  "resources": [
    {
      "module": "module.create-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:security-group/sg-06ba81d56c8dba110",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-06ba81d56c8dba110",
            "ingress": [],
            "name": "default-dev-test-cluster-2023033107554801360000000c",
            "name_prefix": "default-dev-test-cluster-",
            "owner_id": "060182761552",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-dev-test-cluster"
            },
            "tags_all": {
              "Name": "default-dev-test-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.create-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:security-group/sg-0223cfdb967529942",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0223cfdb967529942",
            "ingress": [],
            "name": "default-dev-test-node-2023033107554819370000000d",
            "name_prefix": "default-dev-test-node-",
            "owner_id": "060182761552",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default-dev-test-node",
              "kubernetes.io/cluster/default-dev-test": "owned"
            },
            "tags_all": {
              "Name": "default-dev-test-node",
              "kubernetes.io/cluster/default-dev-test": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.create-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-153183553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06ba81d56c8dba110",
            "security_group_rule_id": "sgr-0af85c551f7554545",
            "self": false,
            "source_security_group_id": "sg-0223cfdb967529942",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.eks.aws_security_group.cluster",
            "module.create-cluster.module.eks.aws_security_group.node",
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.create-cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-921026080",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0223cfdb967529942",
            "security_group_rule_id": "sgr-05938c215ccb30de2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.eks.aws_security_group.cluster",
            "module.create-cluster.module.eks.aws_security_group.node",
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3348345476",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0223cfdb967529942",
            "security_group_rule_id": "sgr-03b3409248f8145ff",
            "self": false,
            "source_security_group_id": "sg-06ba81d56c8dba110",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.eks.aws_security_group.cluster",
            "module.create-cluster.module.eks.aws_security_group.node",
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2297686681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0223cfdb967529942",
            "security_group_rule_id": "sgr-0f2d2ca386f007f6a",
            "self": false,
            "source_security_group_id": "sg-06ba81d56c8dba110",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.eks.aws_security_group.cluster",
            "module.create-cluster.module.eks.aws_security_group.node",
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1391309102",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0223cfdb967529942",
            "security_group_rule_id": "sgr-0ffbd9945f3060ded",
            "self": false,
            "source_security_group_id": "sg-06ba81d56c8dba110",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.eks.aws_security_group.cluster",
            "module.create-cluster.module.eks.aws_security_group.node",
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-910983909",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0223cfdb967529942",
            "security_group_rule_id": "sgr-05a70cf79e466b88c",
            "self": false,
            "source_security_group_id": "sg-06ba81d56c8dba110",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.eks.aws_security_group.cluster",
            "module.create-cluster.module.eks.aws_security_group.node",
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2840184749",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0223cfdb967529942",
            "security_group_rule_id": "sgr-09f7ce1b28f2b2c61",
            "self": false,
            "source_security_group_id": "sg-06ba81d56c8dba110",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.eks.aws_security_group.cluster",
            "module.create-cluster.module.eks.aws_security_group.node",
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1212876837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0223cfdb967529942",
            "security_group_rule_id": "sgr-03f9c1066a1d7ffb6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.eks.aws_security_group.cluster",
            "module.create-cluster.module.eks.aws_security_group.node",
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1027491349",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0223cfdb967529942",
            "security_group_rule_id": "sgr-008c9edd5c0b93e46",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.eks.aws_security_group.cluster",
            "module.create-cluster.module.eks.aws_security_group.node",
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2573329914",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0223cfdb967529942",
            "security_group_rule_id": "sgr-0e344e51ffd3679ea",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.eks.aws_security_group.cluster",
            "module.create-cluster.module.eks.aws_security_group.node",
            "module.create-cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07592c609d4c6e7a7",
            "domain": "vpc",
            "id": "eipalloc-07592c609d4c6e7a7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-174-149-38.compute-1.amazonaws.com",
            "public_ip": "35.174.149.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "default-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "default-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:internet-gateway/igw-0398c4a6979453f1f",
            "id": "igw-0398c4a6979453f1f",
            "owner_id": "060182761552",
            "tags": {
              "Name": "default-vpc"
            },
            "tags_all": {
              "Name": "default-vpc"
            },
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "dependencies": [
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07592c609d4c6e7a7",
            "connectivity_type": "public",
            "id": "nat-01138588f69e8cb51",
            "network_interface_id": "eni-0fc4a7f4105243b3d",
            "private_ip": "10.0.4.47",
            "public_ip": "35.174.149.38",
            "subnet_id": "subnet-0919bdf0fcca20803",
            "tags": {
              "Name": "default-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "default-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_eip.nat",
            "module.create-cluster.module.vpc.aws_internet_gateway.this",
            "module.create-cluster.module.vpc.aws_subnet.public",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af969c890025bbda1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01138588f69e8cb51",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af969c890025bbda",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_eip.nat",
            "module.create-cluster.module.vpc.aws_internet_gateway.this",
            "module.create-cluster.module.vpc.aws_nat_gateway.this",
            "module.create-cluster.module.vpc.aws_route_table.private",
            "module.create-cluster.module.vpc.aws_subnet.public",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0398c4a6979453f1f",
            "id": "r-rtb-07d0cef601e10cbfe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d0cef601e10cbfe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.vpc.aws_internet_gateway.this",
            "module.create-cluster.module.vpc.aws_route_table.public",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:route-table/rtb-0af969c890025bbda",
            "id": "rtb-0af969c890025bbda",
            "owner_id": "060182761552",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-vpc-private"
            },
            "tags_all": {
              "Name": "default-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:route-table/rtb-07d0cef601e10cbfe",
            "id": "rtb-07d0cef601e10cbfe",
            "owner_id": "060182761552",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-vpc-public"
            },
            "tags_all": {
              "Name": "default-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c87ef45c2e8493e5",
            "route_table_id": "rtb-0af969c890025bbda",
            "subnet_id": "subnet-0b0930a82c45af77f"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_route_table.private",
            "module.create-cluster.module.vpc.aws_subnet.private",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd872f28d8f4d2b6",
            "route_table_id": "rtb-0af969c890025bbda",
            "subnet_id": "subnet-0b2ac0fd9643d9a52"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_route_table.private",
            "module.create-cluster.module.vpc.aws_subnet.private",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff41f619c1174a1c",
            "route_table_id": "rtb-0af969c890025bbda",
            "subnet_id": "subnet-0bce27245e21890a2"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_route_table.private",
            "module.create-cluster.module.vpc.aws_subnet.private",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06271b98288c10f39",
            "route_table_id": "rtb-07d0cef601e10cbfe",
            "subnet_id": "subnet-0919bdf0fcca20803"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_route_table.public",
            "module.create-cluster.module.vpc.aws_subnet.public",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad5b1bf5e63c269d",
            "route_table_id": "rtb-07d0cef601e10cbfe",
            "subnet_id": "subnet-0c1cf0486e8912925"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_route_table.public",
            "module.create-cluster.module.vpc.aws_subnet.public",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c6d8d30c1406bd5",
            "route_table_id": "rtb-07d0cef601e10cbfe",
            "subnet_id": "subnet-0d2ce79ea47c7deeb"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_route_table.public",
            "module.create-cluster.module.vpc.aws_subnet.public",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:subnet/subnet-0b0930a82c45af77f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0930a82c45af77f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060182761552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-private-us-east-1a",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "default-vpc-private-us-east-1a",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:subnet/subnet-0b2ac0fd9643d9a52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2ac0fd9643d9a52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060182761552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-private-us-east-1b",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "default-vpc-private-us-east-1b",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:subnet/subnet-0bce27245e21890a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bce27245e21890a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060182761552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-private-us-east-1c",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "default-vpc-private-us-east-1c",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:subnet/subnet-0919bdf0fcca20803",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0919bdf0fcca20803",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060182761552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-public-us-east-1a",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "default-vpc-public-us-east-1a",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:subnet/subnet-0c1cf0486e8912925",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1cf0486e8912925",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060182761552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-public-us-east-1b",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "default-vpc-public-us-east-1b",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:subnet/subnet-0d2ce79ea47c7deeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2ce79ea47c7deeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060182761552",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-vpc-public-us-east-1c",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "default-vpc-public-us-east-1c",
              "kubernetes.io/cluster/default-dev-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-066fd52d62a5a7f4d"
          },
          "dependencies": [
            "module.create-cluster.data.aws_availability_zones.available",
            "module.create-cluster.module.vpc.aws_vpc.this",
            "module.create-cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.create-cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060182761552:vpc/vpc-066fd52d62a5a7f4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b86f6b70c143e6d2",
            "default_route_table_id": "rtb-07a938cf0415978da",
            "default_security_group_id": "sg-03ceec22f996ee940",
            "dhcp_options_id": "dopt-02ff10e47e59edd05",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066fd52d62a5a7f4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a938cf0415978da",
            "owner_id": "060182761552",
            "tags": {
              "Name": "default-vpc"
            },
            "tags_all": {
              "Name": "default-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}